--- a/src/components/MenuHeader/Menu.css
+++ b/src/components/MenuHeader/Menu.css
@@ -1,5 +1,15 @@
 .menu {
     transition: 1s;
+    background-color: black;
+    color: white;
+    display: flex;
+    position: fixed;
+    right: -115px;
+    top: 80px;
+}
+
+.menu.menuActive {
+    transition: 1s;
     display: flex;
     position: fixed;
     color: white;
@@ -23,5 +33,11 @@
 }
 
 .menu ul li p {
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.menu ul li p:hover {
+    color: rgb(175, 175, 175);
     cursor: pointer;
 }
